--- a/warehouse.mode.day.light.listener/.project
+++ b/warehouse.mode.day.light.listener/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>warehouse.mode.day</name>
+	<name>warehouse.mode.day.light.listener</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -33,7 +33,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1710251505472</id>
+			<id>1710863998879</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
