Fix: trying to fix build issue with json

--- a/warehouse.mode.night/.classpath
+++ b/warehouse.mode.night/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.ow2.chameleon.ipojo.CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/matvei/eclipse-workspace/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
